--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>
 		<div class="container3">
 			<div class="container3-1">
-				<div><img src="img/navbar2.png" alt="iphone"></div>
+				<div><img src="img/navbar.png" alt="iphone"></div>
 				<div><p class="container3-title">introducing the fudi app</p><br><article class="container3-content"> <p>Morbi eget posuere dolor. Pellentesque cursus aliquet aliquet. Aeneanet 
 felis sit amet diam mollis ullamcorper. Nullam consequat sem a ante vest
 ibulum tristique. Suspendisse tristique lacus ac mattis porta. </p>
