--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@ ante, a mattis massa. </p></article>
 				Thanks  so much for sharing!”
 				</p>
 				<p>- Michael Dawson, San Francisco, CA -</p>
-				<div></div>
+				<div class="circles">
+				<img src="img/circle.png" alt="">
+				<img src="img/circle.png" alt="">
+				<img src="img/circle.png" alt="">
+			</div>
 			</div>
 		</div>
 		<div class="container5">
